Fix footer overlapping bug

--- a/src/style.css
+++ b/src/style.css
@@ -9,8 +9,7 @@
 }
 
 body {
-  position: relative;
-  min-height: 100vh;
+  /* position: relative; */
   font-family: "Roboto", sans-serif;
 }
 
@@ -19,9 +18,6 @@ body {
   padding: 2rem;
   font-family: "Roboto", sans-serif;
   font-size: 1.3rem;
-  position: absolute;
-  bottom: 0%;
-  width: 100%;
 }
 
 ul li {
@@ -128,10 +124,9 @@ ul li {
 
 .photos-wrapper {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(15rem, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(22rem, 1fr));
   gap: 3rem;
-  padding: 5%;
-  max-width: 80rem;
+  padding: 2% 10%;
   margin: auto;
 }
 
